--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,51 @@
 </head>
 <body>
     <header>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.operaromanapellegrinaggi.org%2Fit%2F2x1-carcer-tullianum-trenitalia&psig=AOvVaw17uniWJwIUw0DsFDaD_T1E&ust=1700573151830000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCPjO7ebW0oIDFQAAAAAdAAAAABAE" alt="logo">
+        <img src="./img/tr5127t3a0-trenitalia-logo-trenitalia-logo-download-vector.png" alt="logo">
     </header>
 
     <main>
         <div class="ticket">
+            <i class="fas fa-ticket"></i>
+            <h2>Prenotazione Biglietto</h2>
+            <hr>
+            <h3>Il prezzo del tuo biglietto è:</h3>
+            <p id="ticketprice"></p>
+            <hr>
+            <h4>Inserisci i tuoi dati:</h4>
+            <form action="#">
+                <label for="name">Nome:</label>
+                <input type="text" name="name" id="name" class="form-control mb-2">
 
+                <label for="surname">Cognome:</label>
+                <input type="text" name="surname" id="surname" class="form-control mb-2">
+
+                <label for="mail">Indirizzo E-mail:</label>
+                <input type="email" name="mail" id="mail" class="form-control mb-2">
+
+                <label for="tel">Numero di Telefono:</label>
+                <input type="tel" name="tel" id="tel" class="form-control mb-3">
+
+                <div class="mb-2">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                    Voglio ricevere una copia elettronica del biglietto
+                    </label>
+                </div>
+
+                <div class="mb-2">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                    Acconsento al trattamento dei dati personali
+                    </label>
+                </div>
+
+                <input type="submit" value="Prenota" class="btn btn-success">
+                <input type="reset" value="Annulla" class="btn btn-warning">
+            </form>
         </div>
     </main>
-    
+
     <script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
