--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 <input type="text" name="surname" id="surname" class="form-control mb-2">
 
                 <label for="mail">Indirizzo E-mail:</label>
-                <input type="email" name="mail" id="mail" class="form-control mb-2">
+                <div class="input-group mb-2">
+                    <span class="input-group-text">@</span>
+                    <input type="email" class="form-control" id="mail">
+                </div>
 
                 <label for="tel">Numero di Telefono:</label>
                 <input type="tel" name="tel" id="tel" class="form-control mb-3">
