Fixed form - ESERCIZIO CONSEGNATO

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                 </div>
 
                 <label for="tel">Numero di Telefono:</label>
-                <input type="tel" name="tel" id="tel" class="form-control mb-3">
+                <div class="input-group mb-2">
+                    <span class="input-group-text"><i class="fas fa-phone" style="font-size: 15px;"></i></span>
+                    <input type="tel" class="form-control" id="tel">
+                </div>
 
                 <div class="mb-2">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
